# smb_object_detection

./: .gitignore  .gitmodules  README.md  requirements.txt
map/: CMakeLists.txt  mapping_stats_11_23_2021_05_00.txt  package.xml  setup.py
map/launch/: continuous_detection.launch  continuous_tag_detection.launch  continuous_tag_detection_client.launch  object_det_tag.launch  see_map.launch  start_mapping.launch  start_mapping_client.launch
map/rviz/: all_frames.rviz  see_map.rviz
map/src/: node.py
map/src/map/: map.py
object_detection/: CMakeLists.txt  objectlerner.py  package.xml  setup.py
object_detection/cfg/: apriltags_tags13.yaml  bb2dist.yaml  configs.yaml  detector_config.yaml  localizer_config.yaml  object_specific.yaml  objectlocalizer.yaml  output_params.yaml  projector_config.yaml  projector_config_SMB264.yaml  projector_config_smb261.yaml  projector_config_smb262.yaml  projector_config_smb264.yaml  smb264_camera_model.yaml
object_detection/launch/: continuous_tag_detection.launch  debayer.launch  jetson_env.sh  object_detection _rosbag.launch  object_detection.launch  object_detection_no_image_undistort.launch  object_detection_no_undistort_rosbag.launch  object_detection_remote.launch  object_detection_rosbag copy.launch  object_detection_rosbag.launch  object_detection_test.launch  object_detection_with_undistort_rosbag.launch
object_detection/msg/: ObjectDetection.msg  ObjectDetectionArray.msg  object.msg
object_detection/rviz/: object_detection.rviz
object_detection/src/: camera.py  detectron.py  node.py  node_refactor.py
object_detection/src/object_detection/: detector.py  imagehandler.py  modelextractor.py  object.py  objectdetector.py  objectdetectorONNX.py  objectlerner.py  objectlocalizer.py  pointprojector.py  reproject.py  utils.cpy  utils.py
object_detection_logger/: CMakeLists.txt  package.xml
object_detection_logger/src/: ObjectDetectionLogger.py
object_detection_msgs/: CMakeLists.txt  package.xml
object_detection_msgs/msg/: ObjectDetection.msg  ObjectDetectionInfo.msg  ObjectDetectionInfoArray.msg  ObjectPosition.msg  ObjectPositionArray.msg  PointCloudArray.msg
object_visualization/: CMakeLists.txt  package.xml  setup.py
object_visualization/launch/: object_visualization.launch
object_visualization/msg/: ObjectDetection.msg
object_visualization/rviz/: all_frames.rviz
object_visualization/src/: node.py
smb_description/: package.xml
smb_description/launch/: debug.launch
(+11 files in other folders)
