<?xml version="1.0"?>
<package format="2">
  <name>object_detection_msgs</name>
  <version>1.0.0</version>
  <description>The object_detection_msgs package</description>
  <maintainer email="thomas.mantel@mavt.ethz.ch">Thomas Mantel</maintainer>
  <license>GPLv3</license>
  <author email="thomas.mantel@mavt.ethz.ch">Thomas Mantel</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
